# GameEngineSkeleton

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Example/Pong/: Pong.cpp  Pong.h
src/: Drawable.cpp  Drawable.h  DrawableGridTerrain.cpp  DrawableGridTerrain.h  DrawableRectangle.cpp  DrawableRectangle.h  DrawableSprite.cpp  DrawableSprite.h  Entity.cpp  Entity.h  Event.cpp  Event.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  SFMLRenderer.cpp  SFMLRenderer.h  SFMLWindow.cpp  SFMLWindow.h  System.cpp  System.h  SystemUpdatePositionFromVelocity.h  Window.h  WindowEvent.cpp  WindowEvent.h
src/Drawable/: Drawable.cpp  Drawable.h  DrawableGridTerrain.h  DrawableRectangle.cpp  DrawableSprite.cpp
src/ECS/: Entity.h  System.h  SystemUpdatePositionFromVelocity.cpp  SystemUpdatePositionFromVelocity.h
src/Renderer/: Renderer.h  SFMLRenderer.cpp  SFMLRenderer.h
src/Window/: SFMLWindow.cpp  Window.cpp  Window.h
